--- a/ansible-jenkins-project4/Jenkinsfile
+++ b/ansible-jenkins-project4/Jenkinsfile
@@ -1,37 +1,28 @@
 pipeline {
     agent any
 
-    parameters {
-        choice(name: 'ENV', choices: ['dev'], description: 'Choose environment to deploy')
-    }
-
-    environment {
-        INVENTORY = "ansible/inventory_${params.ENV}"
-    }
-
     stages {
         stage('Checkout') {
             steps {
-                git url: 'https://github.com/devkelzs/ansible-jenkins-projects.git', branch: 'main'
+                git branch: 'main', url: 'https://github.com/devkelzs/ansible-jenkins-projects'
             }
         }
 
         stage('Run Ansible') {
             steps {
-                sh """
-                    cd ansible-jenkins-project4/ansible
-                    ansible-playbook -i inventory.ini playbook.yml
-                """
+                dir('ansible') {
+                    bat 'wsl ansible-playbook -i inventory.ini playbook.yml'
+                }
             }
         }
     }
 
     post {
-        success {
-            echo "Deployment to ${params.ENV} successful!"
-        }
         failure {
-            echo "Deployment failed!"
+            echo 'Deployment failed!'
+        }
+        success {
+            echo 'Deployment succeeded!'
         }
     }
 }
